# SLM

./: .gitignore  CHAT_FIX_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_REPO_ANALYSIS.md  DATA_PIPELINE.md  HAVOC_7B_IMPLEMENTATION_SUMMARY.md  HAVOC_7B_PRIME_ARCHITECTURE.md  HAVOC_7B_QUICK_START.md  HAVOC_DATA_EXTRACT.py  HAVOC_HYBRID_IMPLEMENTATION_SUMMARY.md  HAVOC_PRIME_README.md  HAVOC_TRAINING_INVENTORY_REPORT.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_GUIDE.md  MIGRATION_GUIDE_SRS_TO_PRIME.md  QUICK_START_HAVOC_HYBRID.md  README.md  RUNPOD_SETUP.md  RUNPOD_SYNC_INSTRUCTIONS.md  STABILIZATION_SUMMARY.md  TOKENIZER_GUIDE.md  TRAINING_GUIDE.md  chat_havoc.py  fix.py  havoc_pretrain_forge.py  list_file_types.py  pyproject.toml  repo_layout.txt  test_chat.py  test_imports.py  test_smoke.py  test_srs_simple.py  test_tokenizer_quick.py  verify_setup.py
.claude/: settings.local.json
configs/: havoc_instruct.yaml  havoc_train.yaml
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.js
logs_phase1/: metrics.jsonl  val_examples.jsonl
scripts/: chat.py  demo_havoc_prime.py  demo_run.py  dev_checklist.sh  phase0_train_tokenizer.py  phase1_pretrain_7b.py  phase2_sft_7b.py  phase3_polish_7b.py  pretokenize_data.py  sanity_finetune.py  serve.py  train.py  train_tokenizer_70k.py
sft_data/: havoc_sft_phase1_chunk1.jsonl  havoc_sft_phase1_chunk2.jsonl  havoc_sft_phase1_chunk3.jsonl  havoc_sft_phase1_chunk4.jsonl  havoc_sft_phase1_full.jsonl  tokenizer_corpus.txt
tests/: conftest.py  smoke_test.py  test_7b_pipeline.py  test_config.py  test_data_pipeline.py  (+7 more)
(+100 files in other folders)
